# buelldocs

./: .env.evample  Package.swift  README.md  index.html  package-lock.json
App/: BuellDocsApp.swift  Info.plist
Sources/BuellDocsCore/Capture/: DocumentCapturing.swift  ImagePreprocessor.swift  MultiFormDetector.swift  PDFPageSplitter.swift
Sources/BuellDocsCore/Classification/: DocumentClassifier.swift
Sources/BuellDocsCore/Export/: ExcelTemplate.swift  MinimalZip.swift  XLSXWriter.swift
Sources/BuellDocsCore/Extraction/: ExtractionEngine.swift  ValueParser.swift  VisionLanguageExtractor.swift
Sources/BuellDocsCore/Models/: Confidence.swift  DocumentType.swift  Exception.swift  ExtractedField.swift  ExtractionSchema.swift  Record.swift  (+3 more)
Tests/BuellDocsCoreTests/: ClassifierTests.swift  ExtractionEngineTests.swift  RulesEngineTests.swift  XLSXWriterTests.swift
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  documents.py  generators.py
backend/app/core/: config.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/schemas/: auth.py  documents.py
backend/app/services/: __init__.py  document_generation_service.py  user_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
src/: App.tsx
src/components/: AuthModal.tsx  BankStatementGenerator.tsx  CertificatesGenerator.tsx  Dashboard.tsx  PaystubGenerator.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useAuthModal.ts
src/utils/: api.js  firebase.js  transactionGenerator.ts
(+29 files in other folders)
